[gd_scene load_steps=2 format=2]

[ext_resource path="res://CustomTextEdit.gd" type="Script" id=1]

[node name="CustomTextEdit" type="CenterContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.0
margin_top = -31.5
margin_right = 106.0
margin_bottom = 31.5
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_left = 300.0
margin_top = 300.0
margin_right = 300.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.164706, 0.164706, 0.164706, 1 )

[node name="TextDisplay" type="RichTextLabel" parent="."]
margin_right = 600.0
margin_bottom = 600.0
rect_min_size = Vector2( 600, 600 )
focus_mode = 2
mouse_filter = 1
bbcode_enabled = true
selection_enabled = true

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 50.0
margin_top = 200.0
margin_right = 550.0
margin_bottom = 400.0
rect_min_size = Vector2( 500, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "sghksjdhg
dsjgdkgj"

[connection signal="text_changed" from="TextEdit" to="." method="_on_TextEdit_text_changed"]
